<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/perfil"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_account_circle"
        android:title="@string/BotaoPerfil"
        />

    <item android:id="@+id/cad_livro"
        android:orderInCategory="200"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_add_a_photo"
        android:title="@string/BotaoCadastrarLivro"
        />

   <!-- <item android:id="@+id/trocas_disponiveis"
        android:orderInCategory="300"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_compare_arrows"
        android:title="@string/BotaoTrocas"
        />-->

    <item android:id="@+id/sair"
        android:orderInCategory="400"
        app:showAsAction="withText"
        android:icon="@drawable/ic_action_export"
        android:title="@string/BotaoSair" />



</menu>